# gpo-studio

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  vitest.config.mjs
docs/: .evidence-report-sha256  architecture.md  browser-accessibility-checklist.md  capability-matrix.md  import-resource-limits.md  installation.md  intune-migration-planner.md  live-publication.md  nvda-validation-runbook.md  publisher-threat-model.md  release-evidence-report.json  release-evidence.md  roadmap.md  windows-quickstart.md  workspace-recovery.md  write-interface-matrix.md
githooks/: pre-commit
plans/: 001-maximalist-platform.md  002-foundation-hardening.md  003-integration-gpmc-capabilities.md  004-admx-editing-and-hardening.md  005-enum-resolution-security-filtering-ui-polish.md  006-export-completeness-diff-integration-real-admx.md  007-gpmc-roundtrip-security-filters-import-store-hygiene.md  008-validation-hardening-diff-correctness-cleanup.md  009-powershell-plan-idempotency-principal-validation.md  010-ui-module-split-target-type-error-handling.md  011-estate-import-baseline-forking.md  012-security-descriptor-model-sddl.md  013-gpmc-xml-migration-tables-estate-diff-ui.md  014-gap-fixes-wmi-catalogue-gpp-foundation.md  015-1.0-contract-and-model-consistency.md  016-gpp-end-to-end-authoring.md  017-windows-interoperability-program.md  018-workspace-runtime-hardening.md  019-browser-quality-and-accessibility.md  020-release-engineering-and-1.0-gates.md  021-gpmc-parity-contract-and-adapter-platform.md  022-administrative-templates-and-starter-gpo-parity.md  023-estate-scope-delegation-wmi-and-loopback-parity.md  024-group-policy-preferences-full-parity.md  025-security-settings-extension-parity.md  026-scripts-and-managed-artifact-policies.md  027-software-installation-folder-redirection-and-remaining-cses.md  028-gpmc-lifecycle-backup-migration-and-report-parity.md  029-group-policy-modeling-results-and-impact-parity.md  030-controlled-gpmc-publication-parity.md  (+2 more)
(+145 files in other folders)
